# wp-hunter-mcp

./: .gitignore  IMPLEMENTATION_GUIDE.md  LICENSE  QUICK_REFERENCE.md  README.md  USAGE.json  models.py  pyproject.toml  utils.py  wp_hunter_pro.py
tools/: __init__.py  authentication_attacks.py  autonomous_engine.py  detect_wordpress.py  enumerate_users.py  full_pentest.py  injection_suite.py  reconnaissance.py  report_generator.py  security_audit.py  test_sql_injection.py  test_weak_credentials.py  waf_bypass.py  xmlrpc_attacks.py
