[project]
name = "wp-hunter-mcp"
version = "1.0.0"
description = "WordPress Penetration Testing MCP Server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx[http2]>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
]

[project.scripts]
wp-hunter = "wp_hunter_pro:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]
